# vibe-character

./: .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  app.db  character.py  config.py  enums.py  event.py  main.py  pyproject.toml  relationship.py  units.py
app/: __init__.py  models.py  schemas.py  services.py  tables.py
app/api/: __init__.py  routes.py
app/models/: character.py  event.py  relationship.py
app/static/: index.html  script.js  style.css
character-frontend/src/components/: CharacterTable.jsx
frontend/: package-lock.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CharacterDetailModal.jsx  CharacterEditModal.jsx  ConfirmationModal.jsx
migrations/versions/: 58addbb015ee_add_relationship_model_and_link_to_.py  7d69bb6c31b0_initial_migration_with_character_and_.py  ef0f72190d66_add_creation_date_to_character_model.py
