[tool.poetry]
name = "character"
version = "0.1.0"
description = ""
authors = ["Nealon Hager <nealonhager@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.11.8"
pre-commit = "^4.2.0"
faker = "^37.1.0"
icecream = "^2.1.4"
openai = "^1.35.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
