[tool.poetry]
name = "character"
version = "0.1.0"
description = ""
authors = ["Nealon Hager <nealonhager@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.11.8"
pre-commit = "^4.2.0"
faker = "^37.1.0"
icecream = "^2.1.4"
openai = "^1.35.3"
requests = "^2.32.3"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = {version = ">=2.0", extras = ["mypy"]}
marshmallow = "^4.0.0"
flask-migrate = "^4.1.0"
python-dotenv = "^1.1.0"
marshmallow-enum = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
